# Tent-OS-Soul

./: .gitignore  AUDIT_REPORT.md  CHECKLIST.md  Dockerfile  E2E_TEST_FULL_REPORT.md  GAP_ANALYSIS_PRD_vs_CODE.md  HEARTBEAT.md  LIFE_INJECTION_ROADMAP.md  OPENCLAW_VS_TENT_OS_GAP_ANALYSIS.md  PRD_COMPLIANCE_REPORT.md  README.md  REFACTOR_PLAN.md  REMEDIATION_PLAN_v5.md  RUNTIME_VERIFICATION_REPORT.md  SYSTEM_AUDIT_REPORT.md  TEST_REPORT_v4.md  VISION_ARCHITECTURE.md  VISION_ROADMAP.md  WHY_NOT_COPY_OPENCLAW.md  config.json  docker-compose.multi.yml  docker-compose.yml  e2e_eternal_test.py  e2e_full_test.py  e2e_test.py  pyproject.toml  pytest.ini  test_approval.py  test_basic_fixes.py  test_capabilities_e2e.py  test_minimal.py
config/: opa_policies.yaml  policies.yaml  tent_os.docker.yaml  tent_os.yaml
data/: index.json
docs/: 2D世界-完整设计文档.md  AI的2D可视化成长世界-架构分析.md  CLAUDE_CODE_INTEGRATION_BLUEPRINT.md  COMPETITOR_DEEP_DIVE.md  DESIGN_DEKEYWORDIZATION.md  MULTI_AGENT_DESIGN.md  OPENCLAW_COMPETITIVE_STUDY.md  RESEARCH_SYNTHESIS.md  ROADMAP_V2.md  TRIAD_ANALYSIS_TentOS_vs_ClaudeCode_OpenClaw_Harness.md  WEBSOCKET_PROTOCOL.md  avatar内外兼修改造方案.md
plugins/: example_http_executor.py
project_alpha/: README.md
scripts/: control_ui_e2e_test.py  control_ui_e2e_test_v2.py  control_ui_e2e_test_v2.py.bak  entrypoint.sh  integration_test.py  phase1_demo.py  standardize_skills.py  supervisord.conf  ui_test_runner.py  verify_reasoning_batch.py  verify_reasoning_chat_reply.py
tent_os/: __init__.py  bootstrap.py  cli.py  doctor.py  hot_reload.py  logging_config.py  main.py  (+2 more)
(+505 files in other folders)
